--- a/Style.css
+++ b/Style.css
@@ -58,3 +58,71 @@ h1{
     margin: 40px auto 0;
     cursor: pointer;
 }
+.sociallinks img, .useful img{
+    width: 25px;
+    margin: 10px auto 5px 10px;
+    cursor: pointer;
+    
+}
+.sociallinks{
+    width: 25px;
+   text-align: center;
+   position: absolute;
+   top: 35%;
+   transform: translateY(-50); 
+     }
+.useful{
+       width: 25px;
+       text-align: center;
+       position: absolute;
+      bottom: 50px;
+       }
+.bubles img{
+    width: 50px;
+    animation: bubble 7s linear infinite;
+}       
+.bubles{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    position: absolute;
+   bottom: -70px;
+    justify-content: space-around;
+}
+@keyframes bubble{
+    0%{
+        transform: translateY(0);
+        opacity: 0;
+    }
+    50%{
+        opacity: 1;
+    }
+    75%{
+        opacity: 1;
+    }
+    100%{
+        transform: translateY(-80vh);
+        opacity: 1;
+    }
+    }
+    .bubles img:nth-child(1){
+        animation-delay: 1s;
+    }
+    .bubles img:nth-child(2){
+        animation-delay: 2s;
+    }
+    .bubles img:nth-child(3){
+        animation-delay: 1.5s;
+    }
+    .bubles img:nth-child(4){
+        animation-delay: 3.5s;
+    }
+    .bubles img:nth-child(5){
+        animation-delay: 2s;
+    }
+    .bubles img:nth-child(6){
+        animation-delay: 4.5s;
+    }
+    .bubles img:nth-child(7){
+        animation-delay: 3s;
+    }
